--- a/go/dockerfile/1.19.5/Dockerfile
+++ b/go/dockerfile/1.19.5/Dockerfile
@@ -1,29 +1,26 @@
 # 3.07G
 FROM king011/dev-go-base:22.04
 
-# 安裝 golang
-# 3.53G - 3.07G = 460M
+# 3.93G
 RUN set -eux; \
-	# golang
+    # 安裝 golang
+    # 3.53G - 3.07G = 460M
     curl -#Lo /a.tar.gz https://go.dev/dl/go1.19.5.linux-amd64.tar.gz; \
     mkdir /opt/google; \
     tar -zxvf /a.tar.gz -C /opt/google; \
     rm /a.tar.gz; \
-	mkdir /opt/google/golib
-
-# 爲 golang 設置環境變量
-ENV GOROOT=/opt/google/go \
-    GOPATH=/opt/google/golib \
-    PATH=$PATH:/opt/google/go/bin:/opt/google/golib/bin
-
-# 安裝 code-server 用於編寫代碼
-# 3.93G - 3.53G = 400 M
-RUN set -eux; \
+	mkdir /opt/google/golib; \
+    # 安裝 code-server 用於編寫代碼
+    # 3.93G - 3.53G = 400 M
     curl -#Lo /a.tar.gz https://github.com/coder/code-server/releases/download/v4.9.1/code-server-4.9.1-linux-amd64.tar.gz; \
     tar -zxvf /a.tar.gz -C /opt/; \
     mv /opt/code-server-4.9.1-linux-amd64 /opt/code-server;\
     rm /a.tar.gz;
 
+# 爲 golang 設置環境變量
+ENV GOROOT=/opt/google/go \
+    GOPATH=/opt/google/golib \
+    PATH=$PATH:/opt/google/go/bin:/opt/google/golib/bin
 
 # 安裝開發用到的庫和工具
 RUN set -eux; \
@@ -53,9 +50,6 @@ RUN set -eux; \
     gosu dev /opt/code-server/bin/code-server --install-extension heptio.Jsonnet; \
     gosu dev /opt/code-server/bin/code-server --install-extension zxh404.vscode-proto3; \
     gosu dev /opt/code-server/bin/code-server --install-extension golang.Go; \
-    echo ok;
-
-RUN set -eux; \
     # golang 開發依賴
     chown dev.dev /opt/google/golib; \
     gosu dev  go install -v github.com/cweill/gotests/gotests@v1.6.0; \
@@ -69,8 +63,10 @@ RUN set -eux; \
     gosu dev go install github.com/golang/protobuf/protoc-gen-go@latest; \
     gosu dev go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest; \
     # 刪除安裝緩存
-    rm /home/dev/.cache -rf; \
-    # 設定 code-server 用戶配置
+    rm /home/dev/.cache -rf; 
+
+# code-server 用戶設定
+RUN set -eux; \
     echo '{' > /home/dev/.local/share/code-server/User/settings.json; \
     echo '    "jsonnet.outputFormat": "json",' >> /home/dev/.local/share/code-server/User/settings.json; \
     echo '    "files.associations": {' >> /home/dev/.local/share/code-server/User/settings.json; \
@@ -81,8 +77,6 @@ RUN set -eux; \
     echo '    "workbench.colorTheme": "Default Dark+"' >> /home/dev/.local/share/code-server/User/settings.json; \
     echo '}' >> /home/dev/.local/share/code-server/User/settings.json; \
     chown dev.dev  /home/dev/.local/share/code-server/User/settings.json;
-
-
 
 # 項目根路徑
 VOLUME ["/home/dev/project"]
